generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Roles {
  role_id     Int                @id @default(autoincrement())
  role_name   String             @unique @db.VarChar(20)
  role_level  Int                @unique
  permissions Role_Permissions[]
  users       Users[]
}

model Users {
  user_id    String           @id @default(uuid()) @db.VarChar(36)
  email      String           @unique @db.VarChar(100)
  password   String           @db.VarChar(60)
  first_name String           @db.VarChar(100)
  last_name  String           @db.VarChar(100)
  phone      String?          @db.VarChar(10)
  role_id    Int
  addresses  Addresses[]
  inv_logs   Inventory_Logs[]
  orders     Orders[]
  logs       System_Logs[]
  role       Roles            @relation(fields: [role_id], references: [role_id])
  wishlists  Wishlists[]
  reviews    Product_Reviews[]
}

model Permissions {
  permission_id   Int                @id @default(autoincrement())
  permission_name String             @unique @db.VarChar(100) 
  description     String?            @db.VarChar(255)
  roles           Role_Permissions[]
}

model Role_Permissions {
  role_permissions_id Int         @id @default(autoincrement())
  role_id             Int
  permission_id       Int
  permission          Permissions @relation(fields: [permission_id], references: [permission_id])
  role                Roles       @relation(fields: [role_id], references: [role_id])
}

model System_Logs {
  log_id         Int      @id @default(autoincrement())
  user_id        String   @db.VarChar(36)
  action_details String   @db.VarChar(255)
  created_at     DateTime @default(now())
  user           Users    @relation(fields: [user_id], references: [user_id])
}

model Categories {
  category_id   Int        @id @default(autoincrement())
  category_name String     @db.VarChar(100)
  products      Products[]
}

model Products {
  product_id     String            @id @default(uuid()) @db.VarChar(36)
  product_name   String            @db.VarChar(100)
  description    String?            @db.VarChar(255)
  unit_price     Int
  stock_quantity Int
  category_id    Int
  inv_logs       Inventory_Logs[]
  orderItems     Order_Items[]
  images         Product_Images[]
  reviews        Product_Reviews[]
  views          Product_Views[]
  category       Categories        @relation(fields: [category_id], references: [category_id])
  wishlists      Wishlists[]
}

model Product_Images {
  image_id   Int      @id @default(autoincrement())
  product_id String   @db.VarChar(36)
  image_url  String
  is_main    Boolean  @default(false)
  product    Products @relation(fields: [product_id], references: [product_id])
}

model Inventory_Logs {
  inv_log_id Int      @id @default(autoincrement())
  product_id String   @db.VarChar(36)
  user_id    String   @db.VarChar(36)
  change_qty Int
  reason     String   @db.VarChar(255)
  created_at DateTime @default(now())
  product    Products @relation(fields: [product_id], references: [product_id])
  user       Users    @relation(fields: [user_id], references: [user_id])
}

model Product_Views {
  view_id    Int      @id @default(autoincrement())
  product_id String   @db.VarChar(36)
  viewed_at  DateTime @default(now())
  product    Products @relation(fields: [product_id], references: [product_id])
}

model Addresses {
  address_id     Int      @id @default(autoincrement())
  user_id        String   @db.VarChar(36)
  recipient_name String   @db.VarChar(100)
  phone_number   String   @db.VarChar(10)
  address_detail String   @db.VarChar(255)
  user           Users    @relation(fields: [user_id], references: [user_id])
  orders         Orders[]
}

model Orders {
  order_id        String        @id @db.VarChar(16)
  user_id         String        @db.VarChar(36)
  total_amount    Int
  shipping_cost  Int            @default(0)
  status          String        @db.VarChar(20)
  rejection_reason String?      @db.VarChar(255)
  tracking_number String?       @db.VarChar(20)
  address_id      Int?
  created_at      DateTime      @default(now())
  items           Order_Items[]
  address         Addresses?    @relation(fields: [address_id], references: [address_id])
  user            Users         @relation(fields: [user_id], references: [user_id])
  payments        Payments[]
  shippings       Shippings[]
}

model Order_Items {
  item_id        Int      @id @default(autoincrement())
  order_id       String   @db.VarChar(16)
  product_id     String   @db.VarChar(36)
  quantity       Int
  price_at_order Int
  order          Orders   @relation(fields: [order_id], references: [order_id])
  product        Products @relation(fields: [product_id], references: [product_id])
}

model Shippings {
  shipping_id   Int                @id @default(autoincrement())
  order_id      String             @db.VarChar(16)
  shipping_date DateTime
  provider_id   Int
  order         Orders             @relation(fields: [order_id], references: [order_id])
  provider      Shipping_Providers @relation(fields: [provider_id], references: [provider_id])
}

model Shipping_Providers {
  provider_id   Int         @id @default(autoincrement())
  provider_name String      @db.VarChar(100)
  shippings     Shippings[]
}

model Payment_Methods {
  method_id      Int     @id @default(autoincrement())
  bank_name      String  @db.VarChar(100)
  account_number String  @db.VarChar(15)
  account_name   String? @db.VarChar(100)
}

model Payments {
  payment_id  String  @id @default(uuid()) @db.VarChar(36)
  order_id    String  @db.VarChar(16)
  amount_paid Int
  slip_url    String
  is_verified Boolean @default(false)
  payment_date DateTime @default(now())
  order       Orders  @relation(fields: [order_id], references: [order_id])
}

model Product_Reviews {
  review_id    Int      @id @default(autoincrement())
  product_id   String   @db.VarChar(36)
  user_id      String   @db.VarChar(36)
  rating_score Int
  comment      String?  @db.VarChar(255)
  created_at   DateTime @default(now())
  product      Products @relation(fields: [product_id], references: [product_id])
  user         Users    @relation(fields: [user_id], references: [user_id])
}

model Wishlists {
  wishlist_id Int      @id @default(autoincrement())
  user_id     String   @db.VarChar(36)
  product_id  String   @db.VarChar(36)
  product     Products @relation(fields: [product_id], references: [product_id])
  user        Users    @relation(fields: [user_id], references: [user_id])
}

model Shop_Settings {
  setting_id   Int    @id @default(autoincrement())
  config_key   String @unique @db.VarChar(100)
  config_value String
}

generator dbml {
  provider = "prisma-dbml-generator"
}
